test/good/classes/inheritance09.px

class A def
    String x: "A"

class B(A) def
    String x: "B"


func f(A a: A(), A b: B()) String def
    return a.x + b.x

print f()
